<resources>
    <string name="app_name">Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="scan">scan</string>
    <string name="createDatabase">create database</string>
    <string name="searchNet">search over Internet</string>
    <string name="search">search</string>
    <string name="DBActivity">My Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="typeName">type your database name</string>
    <string name="typeNameHint">type  a name...</string>
    <string name="title_activity_batabase">BatabaseActivity</string>
    <string name="title_home">Products</string>
    <string name="title_notifications">shortcuts</string>
    <string name="addProduct">add</string>
    <string name="saleproduct">sale</string>
    <string name="cancel">cancel</string>
    <string name="addProductDB">add product to database</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="limits">limits</string>
    <string name="disc">disc</string>
    <string name="units">units</string>
    <string name="added">added</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="chooseAction">choose action</string>
    <string name="sureDelete">Are you sure you want to delete this entry</string>
    <string name="deleteEntry">delete entry</string>
    <string name="history">history</string>
    <string name="bill">bill</string>
    <string name="oneMore">add one more</string>
    <string name="showList">show the list</string>
    <string name="addToBill">add to bill</string>
    <string name="count">count</string>
    <string name="productExists">this product is already exists</string>
    // info fragment strings  :: it's a lot ^-^
    <string name="welcome">welcome</string>
    <string name="WhatMPCanDo">What MosPro Scanner Can do ?</string>
    <string name="readBarcode">- Scan Barcode and QR and make your own history</string>
    <string name="crDB">- create your own database</string>
    <string name="addDetials">-  add detials to your product such as price and disc</string>
    <string name="makeBills">- create your bills</string>
    <string name="displayShortcuts">- show your shortcuts  according to limits</string>


</resources>
