<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="140dp"
                    android:paddingTop="130dp"
                    android:paddingBottom="20dp"
                    android:text="@string/welcome"
                    android:textColor="#4f6a6c"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/WhatMPCanDo"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/readBarcode"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/crDB"

                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"

                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/addDetials"

                    />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"

                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/makeBills"

                    />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"

                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="3dp"

                    android:text="@string/displayShortcuts" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>