<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateDB_Fragment"
    android:clickable="true"
    android:background="#d4d4d4">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="116dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_CreateDBFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/typeName"
            android:textColor="#aeb6b6" />

        <EditText
            android:id="@+id/editText_CreatedDBFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/typeNameHint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_CreateDBFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:text="@string/createDatabase"
            android:background="@drawable/btn_backgroud"

            />
    </LinearLayout>
</RelativeLayout>