<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d4d4d4"
    android:id="@+id/mainLayout"
    android:stateListAnimator="@null"
    android:textAllCaps="false"
    tools:context=".MainActivity">
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MergeRootFrame"
        >
    </FrameLayout>
    <LinearLayout
        android:id="@+id/buttonsContainer_MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            app:srcCompat="@mipmap/ic_launcher_round" />
        <Button
            android:id="@+id/btn_scan_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/btn_backgroud"
            android:text="@string/search"
            android:textColor="#40595b"
            android:stateListAnimator="@null"
            />

        <Button
            android:id="@+id/btn_history_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/btn_backgroud"
            android:text="@string/history"
            android:textColor="#40595b"
            android:stateListAnimator="@null"
            />
        <Button
            android:id="@+id/btn_createdb_mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/btn_backgroud"
            android:text="@string/createDatabase"
            android:textColor="#40595b" />
    </LinearLayout>
    <Button
        android:id="@+id/infoButton_MainActivity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:background="@drawable/btn_backgroud"
        android:text="i"
        android:textAllCaps="false"
        android:textColor="#40595b" />


</RelativeLayout>